force-app/main/default/objects/CP_Service_Request__c/CP_Service_Request__c.object-meta.xml
<CustomObject>
    <label>CP Service Request</label>
    <nameField>
        <label>CP Service Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>