force-app/main/default/objects/CP_Service_Request__c/fields/BackgroundContext__c.field-meta.xml
<CustomField>
    <fullName>BackgroundContext__c</fullName>
    <inlineHelpText>Current situation and challenges</inlineHelpText>
    <label>Background Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>