force-app/main/default/objects/CP_Service_Request__c/fields/Coordinating_Program__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinating Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Service Requests</relationshipLabel>
    <relationshipName>CP_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>