force-app/main/default/objects/CP_Service_Request__c/fields/PreferredDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredDeliveryMethod__c</fullName>
    <label>Preferred Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Self-Paced Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>