force-app/main/default/objects/CP_Service_Request__c/fields/PreferredTimeline__c.field-meta.xml
<CustomField>
    <fullName>PreferredTimeline__c</fullName>
    <label>Preferred Timeline</label>
    <type>Date</type>
</CustomField>