force-app/main/default/objects/CP_Service_Request__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>