force-app/main/default/objects/CP_Service_Request__c/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Planning</fullName>
            </value>
            <value>
                <fullName>Board/Staff Support</fullName>
            </value>
            <value>
                <fullName>Fundraising/Finance</fullName>
            </value>
            <value>
                <fullName>Marketing/Communications</fullName>
            </value>
            <value>
                <fullName>Accreditation Support</fullName>
            </value>
            <value>
                <fullName>General Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>