force-app/main/default/objects/CP_Service_Request__c/fields/SpecificObjectives__c.field-meta.xml
<CustomField>
    <fullName>SpecificObjectives__c</fullName>
    <inlineHelpText>Detailed description of training/consulting needs</inlineHelpText>
    <label>Specific Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>