force-app/main/default/objects/CP_Service_Request__c/fields/TrainingPriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>TrainingPriorityLevel__c</fullName>
    <label>Training Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent – Immediate Need (1–2 weeks)</fullName>
            </value>
            <value>
                <fullName>High – Strategic or Program-Critical (1–2 months)</fullName>
            </value>
            <value>
                <fullName>Medium – Scheduled Development (Quarterly)</fullName>
            </value>
            <value>
                <fullName>Low – Long-Term / General Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>